.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/ATG_Product__c.object
<CustomObject>
    <fields>
        <fullName>ATC_Dealer_Id__c</fullName>
        <description>ATC Dealer Id from the account.</description>
        <formula>Dealer__r.ATC_Dealer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATC Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Product_Key__c</fullName>
        <description>Unique record identifier for individual ATG Product.</description>
        <externalId>true</externalId>
        <label>BU Product Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The Business Unit the product was purchased from.</description>
        <inlineHelpText>The Business Unit the product was purchased from.</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
                <color>#000066</color>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
                <color>#66E9BD</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Effective_Date__c</fullName>
        <label>Cancel Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>Formula that determines whether the dealer is DSC, Major Account, etc.</description>
        <formula>CASE( Dealer__r.RecordTypeId , 
&quot;012E000000052TQ&quot;, &quot;Dealer&quot;, 
&quot;012E00000005SLl&quot;, &quot;DSC Account&quot;,
&quot;012E00000005NpL&quot;,&quot;Major Account&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>The dealer that the product is related to.</description>
        <inlineHelpText>The dealer that the product is related to.</inlineHelpText>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ATG Products</relationshipLabel>
        <relationshipName>ATG_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the Product was inactivated at the specified BU</description>
        <inlineHelpText>Date the Product was inactivated at the specified BU</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Reason__c</fullName>
        <description>Reason the product was cancelled.</description>
        <label>End Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not see value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date the product expires.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>The related Dealer Group, if applicable.</description>
        <formula>Dealer__r.Group_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <description>Date that the product is installed.</description>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The incoming order number, if applicable.</description>
        <label>Order #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Spend__c</fullName>
        <description>If the Spend is changed, workflow captures the prior value.</description>
        <label>Prior Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>The related product code, if applicable.</description>
        <label>Product Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Dealer_Name__c</fullName>
        <description>Used for data checking on BU feeds.</description>
        <inlineHelpText>Used for data checking on BU feeds.</inlineHelpText>
        <label>Product Dealer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Related product group, if applicable.</description>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>The name of the product purchased.</description>
        <label>Product Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status_Value__c</fullName>
        <description>Set by workflow as the product status is updated.  Active product = 1, Inactive Product = 0.</description>
        <inlineHelpText>Set by workflow as the product status is updated.  Active product = 1, Inactive Product = 0.</inlineHelpText>
        <label>Product Status Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>The status of the product at the BU.</description>
        <inlineHelpText>The status of the product at the BU.</inlineHelpText>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation with Restriction</fullName>
                <color>#419249</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>Date the product was purchased.</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVOC_ID__c</fullName>
        <formula>Dealer__r.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>Sales Rep listed on the incoming feed for the product purchased.</description>
        <label>Sales Rep</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend__c</fullName>
        <description>The dollar amount of the product purchased.</description>
        <label>Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stale_Count__c</fullName>
        <description>Formula field that creates a value for product that has not been sold within the last 90 days.</description>
        <formula>IF( 
 AND(
  ISPICKVAL(Business_Unit__c, &quot;ATC&quot;),
  ISPICKVAL(Product_Status__c, &quot;Delivered&quot;),
 (Start_Date__c + 90)&lt; Today()), 0, 1)</formula>
        <inlineHelpText>Formula field that creates a value for product that has not been sold within the last 90 days.</inlineHelpText>
        <label>Stale Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date Product is active at BU.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X45_day_renewal_notice_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by system workflow.</description>
        <inlineHelpText>Updated by system workflow.</inlineHelpText>
        <label>45 day renewal notice sent</label>
        <type>Checkbox</type>
    </fields>
    <label>ATG Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Dealer__c</columns>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Spend__c</columns>
        <columns>Prior_Spend__c</columns>
        <columns>Product_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Cancel_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>products_expiring_this_month</fullName>
        <columns>NAME</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Cancel_Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiration_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:60</value>
        </filters>
        <filters>
            <field>Product_Status__c</field>
            <operation>notEqual</operation>
            <value>Expired,Cancelled</value>
        </filters>
        <filters>
            <field>Dealer_Type__c</field>
            <operation>notContain</operation>
            <value>dsc,major account</value>
        </filters>
        <label>Products expiring this month</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>ATG Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATG Products</pluralLabel>
    <recordTypes>
        <fullName>Deactivate_Product</fullName>
        <active>true</active>
        <label>Deactivate Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>